Updated copyright and fixed mobile featured section width on mobile

--- a/public/css/siugo.css
+++ b/public/css/siugo.css
@@ -6898,6 +6898,10 @@ a:focus {
   .parallax-container {
     height: 240px;
   }
+  .section-featured img {
+    max-width: 100%;
+    height: auto;
+  }
 }
 #privacy-policy {
   color: #000;
