--- a/public/less/home.less
+++ b/public/less/home.less
@@ -332,4 +332,11 @@
 	}
 
 	.parallax-container { height: 240px; }
+
+	.section-featured {
+		img {
+			max-width: 100%;
+			height: auto;
+		}
+	}
 }
